@@ -1,4 +1,5 @@
   * Render the appropriate sapling sprite 100% of the time
+  * Show a purple box for unknown blocks, rather than empty space
 
 Minecraft X-Ray 2.7 Maintenance Branch 12 (2011.04.19)
 
